<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.flowingcode.backend-core</groupId>
	<artifactId>backend-core</artifactId>
	<packaging>pom</packaging>
	<version>1.2.0-SNAPSHOT</version>
	<name>Backend Core</name>
	<description>Common utilities for backend enterprise application development</description>
	<url>https://www.flowingcode.com/en/open-source/</url>

	<developers>
		<developer>
			<id>flowingcode</id>
			<organization>Flowing Code</organization>
			<organizationUrl>https://www.flowingcode.com</organizationUrl>
		</developer>
	</developers>
  
	<organization>
		<name>Flowing Code</name>
		<url>https://www.flowingcode.com</url>
	</organization>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<prerequisites>
		<maven>3</maven>
	</prerequisites>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.jupiter.version>5.9.2</junit.jupiter.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<inceptionYear>2020</inceptionYear>

	<scm>
		<connection>scm:git:git@github.com:FlowingCode/backend-core.git</connection>
		<url>scm:git:git@github.com:FlowingCode/backend-core.git</url>
		<developerConnection>scm:git:git@github.com:FlowingCode/backend-core.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.persistence</groupId>
				<artifactId>jakarta.persistence-api</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>jakarta.transaction</groupId>
				<artifactId>jakarta.transaction-api</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.32</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>backend-core-data</module>
		<module>backend-core-data-impl</module>
		<module>backend-core-business</module>
		<module>backend-core-business-impl</module>
		<module>backend-core-business-spring-impl</module>
		<module>backend-core-model</module>
	</modules>

	<build>

		<pluginManagement>

			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<useSystemClassLoader>false</useSystemClassLoader>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.1</version>
					<configuration>
						<tagNameFormat>@{project.version}</tagNameFormat>
						<releaseProfiles>release</releaseProfiles>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>2.0.0</version>
					<configuration>
						<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
						<licenseName>apache_v2</licenseName>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.9.0</version>
				</plugin>
			</plugins>

		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<quiet>true</quiet>
					<doclint>none</doclint>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.doxia</groupId>
						<artifactId>doxia-module-markdown</artifactId>
						<version>1.9.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>com.github.siom79.japicmp</groupId>
				<artifactId>japicmp-maven-plugin</artifactId>
				<version>0.25.4</version>
				<configuration>
					<parameter>
						<breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
						<breakBuildOnSourceIncompatibleModifications>true</breakBuildOnSourceIncompatibleModifications>
						<breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
					</parameter>
				</configuration>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>cmp</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<quiet>true</quiet>
					<doclint>none</doclint>
					<failOnError>false</failOnError>
					<groups>
						<group>
							<title>commons-data</title>
							<packages>com.flowingcode.backendcore.dao</packages>
						</group>
						<group>
							<title>commons-data-impl</title>
							<packages>com.flowingcode.backendcore.dao.jpa</packages>
						</group>
						<group>
							<title>commons-business</title>
							<packages>com.flowingcode.backendcore.service</packages>
						</group>
						<group>
							<title>commons-business-impl</title>
							<packages>com.flowingcode.backendcore.service*</packages>
						</group>
						<group>
							<title>commons-model</title>
							<packages>com.flowingcode.backendcore.model*:com.flowingcode.backendcore.exception:com.flowingcode.backendcore.validation</packages>
						</group>
					</groups>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>aggregate-no-fork</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<profile>
			<id>gpg</id>
			<activation>
				<property>
					<name>env.MAVEN_GPG_PASSPHRASE</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.7</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

        	<profile>
            		<id>release</id>
            		<build>
                		<plugins>
                    			<plugin>
                        			<groupId>org.sonatype.central</groupId>
                        			<artifactId>central-publishing-maven-plugin</artifactId>
                        			<version>0.8.0</version>
                        			<extensions>true</extensions>
                    			</plugin>
                		</plugins>
        	    	</build>
	        </profile>

	</profiles>

	<distributionManagement>
		<site>
			<id>site</id>
			<url>https://docs.flowingcode.com/backend-core</url>
		</site>
	</distributionManagement>

</project>
